<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="?homeCardStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:duplicateParentState="true"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/ram_progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/circular_shape"
                android:indeterminate="false"
                android:progressDrawable="@drawable/circular_progress_bar"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/ram_progress_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="---"
                android:textSize="28sp"
                android:textStyle="bold" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:duplicateParentState="true"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/cpu_progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/circular_shape"
                android:indeterminate="false"
                android:progressDrawable="@drawable/circular_progress_bar"
                android:textAlignment="center" />
            <TextView
                android:id="@+id/cpu_progress_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="---"
                android:textSize="28sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_marginStart="10dp"
            android:textAppearance="?textAppearanceBodyMedium"
            android:text="@string/text_total_spoofed"/>
        <TextView
            android:id="@+id/tv_stat_spoofed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_marginStart="10dp"
            android:textAppearance="?textAppearanceBodyLarge"
            android:text="0"
            tools:ignore="HardcodedText" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_marginStart="10dp"
            android:textAppearance="?textAppearanceBodyMedium"
            android:text="@string/text_total_exceptions"/>
        <TextView
            android:id="@+id/tv_stat_exceptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_marginStart="10dp"
            android:textAppearance="?textAppearanceBodyLarge"
            android:text="0"
            tools:ignore="HardcodedText" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_marginStart="10dp"
            android:textAppearance="?textAppearanceBodyMedium"
            android:text="@string/text_total_hooks"/>
        <TextView
            android:id="@+id/tv_stat_hooks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_marginStart="10dp"
            android:textAppearance="?textAppearanceBodyLarge"
            android:text="0"
            tools:ignore="HardcodedText" />

    </LinearLayout>

</LinearLayout>